refactor: cars 객체 깊은 복사로 반환 수정